--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "@nestjs/graphql": "^9.1.2",
     "@nestjs/jwt": "8.0.0",
     "@nestjs/mongoose": "^9.0.2",
-    "@nestjs/passport": "^8.0.1",
+    "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.2.0",
     "@nestjs/swagger": "^5.1.5",
     "apollo-server-core": "^3.6.2",
-    "apollo-server-express": "^3.6.1",
+    "apollo-server-express": "^3.6.2",
     "bcryptjs": "^2.4.3",
-    "chalk": "^4.1.2",
+    "chalk": "^5.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
@@ -70,34 +70,34 @@
     "@angular/cli": "^13.1.2",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.2.0",
-    "@nrwl/cli": "13.4.1",
-    "@nrwl/eslint-plugin-nx": "13.4.1",
-    "@nrwl/jest": "13.4.1",
-    "@nrwl/js": "13.4.1",
-    "@nrwl/linter": "13.4.1",
-    "@nrwl/nest": "^13.4.1",
-    "@nrwl/node": "13.4.1",
-    "@nrwl/tao": "13.4.1",
-    "@nrwl/workspace": "13.4.1",
+    "@nrwl/cli": "13.4.6",
+    "@nrwl/eslint-plugin-nx": "13.4.6",
+    "@nrwl/jest": "13.4.6",
+    "@nrwl/js": "13.4.6",
+    "@nrwl/linter": "13.4.6",
+    "@nrwl/nest": "13.4.6",
+    "@nrwl/node": "13.4.6",
+    "@nrwl/tao": "13.4.6",
+    "@nrwl/workspace": "13.4.6",
     "@prisma/client": "^3.8.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jest": "27.0.2",
-    "@types/node": "14.14.33",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.10",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@typescript-eslint/eslint-plugin": "~5.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "~5.3.0",
-    "eslint": "8.2.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.0",
-    "jest": "27.2.3",
+    "jest": "^27.4.7",
     "lint-staged": "^12.1.4",
     "prettier": "^2.3.1",
     "prisma": "^3.8.0",
     "prisma-nestjs-graphql": "^14.6.1",
-    "ts-jest": "27.0.5",
-    "ts-node": "~10.3.0",
-    "typescript": "~4.4.3"
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   },
   "lint-staged": {
     "*.{js,json,md,ts}": [
