--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "joi-password": "^2.0.3",
     "mongoose": "^6.1.7",
     "nest-winston": "^1.6.2",
+    "node-fetch": "^3.1.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
