--- a/libs/shared/data-access-api/project.json
+++ b/libs/shared/data-access-api/project.json
@@ -1,30 +1,30 @@
 {
   "projectType": "library",
-  "root": "libs/shared/api",
-  "sourceRoot": "libs/shared/api/src",
+  "root": "libs/shared/data-access-api",
+  "sourceRoot": "libs/shared/data-access-api/src",
   "prefix": "wwwsolutions",
   "targets": {
     "build": {
       "executor": "@nrwl/angular:ng-packagr-lite",
-      "outputs": ["dist/libs/shared/api"],
+      "outputs": ["dist/libs/shared/data-access-api"],
       "options": {
-        "project": "libs/shared/api/ng-package.json"
+        "project": "libs/shared/data-access-api/ng-package.json"
       },
       "configurations": {
         "production": {
-          "tsConfig": "libs/shared/api/tsconfig.lib.prod.json"
+          "tsConfig": "libs/shared/data-access-api/tsconfig.lib.prod.json"
         },
         "development": {
-          "tsConfig": "libs/shared/api/tsconfig.lib.json"
+          "tsConfig": "libs/shared/data-access-api/tsconfig.lib.json"
         }
       },
       "defaultConfiguration": "production"
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/shared/api"],
+      "outputs": ["coverage/libs/shared/data-access-api"],
       "options": {
-        "jestConfig": "libs/shared/api/jest.config.js",
+        "jestConfig": "libs/shared/data-access-api/jest.config.js",
         "passWithNoTests": true
       }
     },
@@ -32,8 +32,8 @@
       "executor": "@nrwl/linter:eslint",
       "options": {
         "lintFilePatterns": [
-          "libs/shared/api/src/**/*.ts",
-          "libs/shared/api/src/**/*.html"
+          "libs/shared/data-access-api/src/**/*.ts",
+          "libs/shared/data-access-api/src/**/*.html"
         ]
       }
     }
