--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -81,7 +81,9 @@
       "@wwwsolutions/api/integration/rest-mongoose": [
         "libs/api/integration/rest-mongoose/src/index.ts"
       ],
-      "@wwwsolutions/shared/api": ["libs/shared/api/src/index.ts"],
+      "@wwwsolutions/shared/data-access-api": [
+        "libs/shared/data-access-api/src/index.ts"
+      ],
       "@wwwsolutions/shared/types": ["libs/shared/types/src/index.ts"],
       "@wwwsolutions/shared/utils": ["libs/shared/utils/src/index.ts"]
     }
